gac_sb/objects/Detail_facture__c.object
<CustomObject>
    <description>SF CONSULTING - permet de saisir plusieurs lignes de détail sur une facture</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Facture__c</fullName>
        <label>Facture</label>
        <referenceTo>Facture__c</referenceTo>
        <relationshipLabel>Détails facture</relationshipLabel>
        <relationshipName>Details_facture</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Montant_HT__c</fullName>
        <label>Montant HT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ordre__c</fullName>
        <inlineHelpText>Ordre d&apos;affichage sur la facture</inlineHelpText>
        <label>Ordre</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_clamation__c</fullName>
        <label>Réclamation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>des_credits__c</fullName>
        <label>% des crédits</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Détail facture</label>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>Detail facture</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Détails facture</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>